--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -53,7 +53,7 @@
   </form>
   <br>
 
-  <form action="/logout" method="get" name="input_box">
+  <form action="/logout" method="POST" name="input_box">
 
     <input type="submit" value="logout">
   </form>
